[gd_scene load_steps=5 format=3 uid="uid://c7pwj4fm86gbc"]

[ext_resource type="Texture2D" uid="uid://bheroavq1udhy" path="res://assets/ui/panel_beige.png" id="1_g72on"]
[ext_resource type="LabelSettings" uid="uid://ky5at5td2qqe" path="res://assets/lg_48_white.tres" id="2_31vgt"]
[ext_resource type="Script" path="res://scripts/levelbutton.gd" id="2_dbiu1"]
[ext_resource type="LabelSettings" uid="uid://jblvftsgxvuc" path="res://assets/lg_24.tres" id="3_gex77"]

[node name="LevelButton" type="TextureButton"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(50, 50)
texture_normal = ExtResource("1_g72on")
script = ExtResource("2_dbiu1")

[node name="MC" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MC"]
layout_mode = 2

[node name="LevelLabel" type="Label" parent="MC/VBoxContainer"]
layout_mode = 2
text = "3"
label_settings = ExtResource("2_31vgt")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScoreLabel" type="Label" parent="MC/VBoxContainer"]
layout_mode = 2
text = "9999"
label_settings = ExtResource("3_gex77")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
